--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadmore-list": "^0.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
